--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "astro": "^2.1.5",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
+    "rehype-katex": "^6.0.3",
     "remark-collapse": "^0.1.2",
+    "remark-math": "^5.1.1",
     "remark-toc": "^8.0.1",
     "satori": "^0.4.3",
     "tailwindcss": "^3.2.7"
